--- a/media_player.yaml
+++ b/media_player.yaml
@@ -2,3 +2,9 @@
   name: Fire Stick 4K
   host: 192.168.50.23
   adb_server_ip: 127.0.0.1
+  
+- platform: kodi
+  name: kodi_appletv
+  host: 192.168.50.11
+  username: !secret kodi_user
+  password: !secret kodi_pass
