--- a/configuration.yaml
+++ b/configuration.yaml
@@ -73,6 +73,7 @@ http:
 
 automation: !include automations.yaml
 camera: !include camera.yaml
+device_tracker: !include device_tracker.yaml
 group: !include groups.yaml
 media_player: !include media_player.yaml
 remote: !include remote.yaml
