--- a/ui_lovelace.yaml
+++ b/ui_lovelace.yaml
@@ -515,7 +515,7 @@ views:
           - climate.honeywell_home_thermostat
           - sensor.living_motion_all
           - remote.harmony_hub_living_room
-          - group.all_lights
+          - group.living_room_lights
         image: /local/Mobile/Living_Room.jpg
         title: Living Room
         type: picture-glance
