--- a/automations.yaml
+++ b/automations.yaml
@@ -36,3 +36,14 @@
       data:
         title: 'HA Server'
         message: 'Warning - HA Server CPU Temp is {{states.sensor.cpu_temperature.state}}f'
+
+# Set Theme at startup
+  - alias: 'Set theme at startup'
+    initial_state: 'on'
+    trigger:
+     - platform: homeassistant
+       event: start
+    action:
+      service: frontend.set_theme
+      data:
+        name: coned_miro
