--- a/ui_lovelace.yaml
+++ b/ui_lovelace.yaml
@@ -21,6 +21,30 @@ resources:
     url: /customcards/github/thomasloven/layout-card.js?track=true
   - type: js
     url: /customcards/github/thomasloven/popup-card.js?track=true
+cch:
+  clock_date: true
+  clock_format: 12
+  exceptions:
+    - conditions:
+        user_agent: Mobile
+      config:
+        hide_tabs: '0'
+        menu: hide
+        options: hide
+    - conditions:
+        user_agent: OS X
+      config:
+        hide_tabs: '1,2'
+    - conditions:
+        user_agent: Windows
+      config:
+        hide_tabs: '1,2'
+  menu: show
+  notifications: clock
+  swipe: true
+  options: show
+  type: 'custom:compact-custom-header'
+  voice: show
 title: Mike's Apartment
 views:
   - cards:
@@ -328,28 +352,6 @@ views:
                   left: 80%
                   top: 47%
                 type: icon
-              - clock_date: true
-                clock_format: 12
-                exceptions:
-                  - conditions:
-                      user_agent: Mobile
-                    config:
-                      hide_tabs: '0'
-                      menu: hide
-                      options: hide
-                  - conditions:
-                      user_agent: OS X
-                    config:
-                      hide_tabs: '1,2'
-                  - conditions:
-                      user_agent: Windows
-                    config:
-                      hide_tabs: '1,2'
-                menu: show
-                notifications: clock
-                options: show
-                type: 'custom:compact-custom-header'
-                voice: show
             image: /local/Lovelace/floorplan_grey2.png
             panel: true
             type: picture-elements
@@ -481,29 +483,6 @@ views:
     theme: dark-mode
     title: Floorplan
   - cards:
-      - clock_date: true
-        clock_format: '12'
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - entities:
           - lock.august_smart_lock_pro
           - light.entrance_2
@@ -543,35 +522,13 @@ views:
     icon: 'mdi:cellphone-iphone'
     title: Mobile
   - cards:
-      - clock_date: true
-        clock_format: '12'
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - entities:
           - calendar.bills
           - calendar.events
           - calendar.gwu
           - calendar.gym_time
           - calendar.http_followshows_com_ical_9oejn9ol
+          - calendar.killshot_black_like_my_soul
           - calendar.michaeldvinci_gmail_com
           - calendar.miro
           - calendar.people
@@ -588,29 +545,6 @@ views:
     icon: 'mdi:calendar-multiselect'
     title: Calendar
   - cards:
-      - clock_date: true
-        clock_format: '12'
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - cards:
           - type: 'custom:tracker-card'
         type: vertical-stack
@@ -623,29 +557,6 @@ views:
     icon: 'mdi:chart-donut'
     title: Other
   - cards:
-      - clock_date: true
-        clock_format: 12
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - cards:
           - entities:
               - entity: sensor.disk_use_percent
@@ -691,29 +602,6 @@ views:
     title: Other
   - badges: []
     cards:
-      - clock_date: true
-        clock_format: '12'
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - cards:
           - entity: climate.honeywell_home_thermostat
             type: thermostat
@@ -764,29 +652,6 @@ views:
     title: Home
   - badges: []
     cards:
-      - clock_date: true
-        clock_format: 12
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - cards:
           - entities:
               - sensor.bathroom_motion_all
@@ -804,29 +669,6 @@ views:
     title: Bathroom
   - badges: []
     cards:
-      - clock_date: true
-        clock_format: 12
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - entities:
           - sensor.fridge_temperature_measurement
           - sensor.freezer_temperature_measurement
@@ -839,29 +681,6 @@ views:
     title: Kitchen
   - badges: []
     cards:
-      - clock_date: true
-        clock_format: 12
-        exceptions:
-          - conditions:
-              user_agent: Mobile
-            config:
-              hide_tabs: '0'
-              menu: hide
-              options: hide
-          - conditions:
-              user_agent: OS X
-            config:
-              hide_tabs: '1,2'
-          - conditions:
-              user_agent: Windows
-            config:
-              hide_tabs: '1,2'
-        main_config: true
-        menu: show
-        notifications: clock
-        options: show
-        type: 'custom:compact-custom-header'
-        voice: show
       - cards:
           - entities:
               - sensor.bedroom_motion_all
