--- a/configuration.yaml
+++ b/configuration.yaml
@@ -43,6 +43,11 @@ google:
   client_id: !secret google_id
   client_secret: !secret google_secret
 
+life360:
+  accounts:
+    - username: !secret life360_user
+      password: !secret life360_pass
+
 updater:
 
 history:
