--- a/sensor.yaml
+++ b/sensor.yaml
@@ -120,3 +120,13 @@
   command: "cat /sys/class/thermal/thermal_zone0/temp"
   unit_of_measurement: "°C"
   value_template: '{{ value | multiply(0.001) | round(1) }}'
+  
+- platform: rest
+  name: "HASS Current Version"
+  resource: https://pypi.python.org/pypi/homeassistant/json
+  value_template: '{{ value_json.info.version }}'
+  scan_interval: 3600
+
+- platform: command_line
+  name: "HASS Installed version"
+  command: "head -5 /config/.HA_VERSION"
