--- a/ui_lovelace.yaml
+++ b/ui_lovelace.yaml
@@ -33,16 +33,6 @@ cch:
   swipe: true
   type: 'custom:compact-custom-header'
 resources:
-  - type: js
-    url: /local/custom-cards/plan-coordinates.js?v=2
-  - type: module
-    url: /customcards/github/custom-cards/tracker-card.js?track=true
-  - type: js
-    url: /customcards/github/thomasloven/card-tools.js?track=true
-  - type: js
-    url: /customcards/github/thomasloven/layout-card.js?track=true
-  - type: js
-    url: /customcards/github/thomasloven/popup-card.js?track=true
   - url: /community_plugin/calendar-card/calendar-card.js
     type: js
   - url: /community_plugin/radial-menu/radial-menu.js
@@ -55,6 +45,16 @@ resources:
     type: module
   - url: /community_plugin/simple-thermostat/simple-thermostat.js
     type: module
+  - url: /community_plugin/plan-coordinates/plan-coordinates.js
+    type: js
+  - type: module
+    url: /customcards/github/custom-cards/tracker-card.js?track=true
+  - type: js
+    url: /customcards/github/thomasloven/layout-card.js?track=true
+  - type: js
+    url: /customcards/github/thomasloven/popup-card.js?track=true
+  - type: js
+    url: /customcards/github/thomasloven/card-tools.js?track=true
 title: ''
 views:
   - cards:
